<resources>
    <string name="app_name">First_App</string>
    <string name="HelloWorld">你好，世界！</string>
    <string name="Start">开始</string>
    <string name="Hello_World">你好，安卓！</string>
    <string name="text_1">Hello</string>
    <string name="text_2">JNU</string>
    <string name="button_1">change text</string>
    <string name="click">点击响应！</string>
    <string name="string_item_price">item_price</string>
    <string name="string_item_name">item name</string>
    <string name="string_ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">任务</string>
    <string name="AppTitle">PlayTask</string>
    <string name="AddTask">+</string>
    <string name="tasks2">奖励</string>
    <string name="me">我的</string>
    <string name="misson">任务</string>
    <string name="reward">奖励</string>
    <string name="new_task_title">新建任务</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="Finish">完成</string>
    <string name="Task_item_name">task name</string>
    <string name="task_item_reward">task reward</string>
    <string name="Task_number">5</string>
    <string name="totalpoint">总任务积分：</string>
    <string name="Total_Point_Value">0</string>
    <string name="statistics">统计</string>
    <string name="title_activity_live_update">LiveUpdateActivity</string>
    <string name="relax">调整心态，释放压力，方能继续前进！</string>
</resources>