<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Apptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/AppTitle"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/button_addmissions"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Apptitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-37dp"
        android:layout_marginEnd="10dp"
        android:text="@string/AddTask" />

    <FrameLayout
        android:id="@+id/nav_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_final"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="650dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_point_title"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="50"
                android:gravity="center_vertical|end"
                android:text="@string/totalpoint"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/total_point"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical|start"
                android:text="@string/Total_Point_Value"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_bottom_navigation" />

</RelativeLayout>

